tests/macros/plugin/page_size.rs
fn main() {
    discourse::questions![Plugin { page_size: todo!() }];
}
